# CyberSecTraining

./: .env.example  .gitignore  CLAUDE.md  CyberSec-Teaching-Tool-Design-Doc.md  CyberSec-Tool-UserFlow-Diagrams.md  IMPLEMENTATION_PLAN_LIVE_VS_TRAINING_MODES.md  README.md  TESTING.md  TODO.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt  start_be.sh
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  devices.py  llm.py  network.py  scenarios.py  settings.py  vulnerabilities.py
backend/app/core/: __init__.py  logging.py
backend/app/db/: init_db.py  seed_data.py  session.py
backend/app/models/: __init__.py  base.py  device.py  preference.py  progress.py  scan.py  topology.py  vulnerability.py
backend/app/schemas/: __init__.py  device.py  network.py  vulnerability.py
backend/app/services/datastore/: __init__.py  base.py  local.py
backend/app/services/llm/: __init__.py  cache.py  models.py  service.py
backend/app/services/packs/: __init__.py  loader.py  models.py  registry.py  validator.py
backend/app/services/scanner/: __init__.py  base.py  device_fingerprint.py  fake_network_generator.py  network_validator.py  nmap_scanner.py  orchestrator.py
backend/logs/: .gitkeep
backend/scripts/: README.md  migrate_db.py
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_devices.py  test_mode_settings.py  test_network.py  test_vulnerabilities.py
backend/tests/db/: test_init_db.py
frontend/src-tauri/: Cargo.toml  tauri.conf.json
(+167 files in other folders)
